# cpp-training

./: .gitignore
mosh-youtube-tutorial/: video-source.txt
program1-helloworld/: CMakeLists.txt
program2-helloworld/: CMakeLists.txt
program3-calc-factorial/: CMakeLists.txt  main.cpp
program4-find-primes/: CMakeLists.txt  main.cpp
program5-areaofcircle/: CMakeLists.txt  main.cpp
program6-windows-gui-simple/: CMakeLists.txt  main.cpp
